# cnn-cifar10-classification

./: .gitignore  README.md  cnn_cifar10_classification.ipynb  pyproject.toml  requirements.txt
.github/workflows/: smoke.yml
docs/: portfolio_summary.md  project_summary.md
notebooks/: README.md  cnn_cifar10_classification.ipynb
results/: model_comparison.csv  selected_run_summary.json
scripts/: generate_result_assets.py  run_experiment.py
src/cnn_cifar10_classification/: __init__.py  experiment.py  models.py
tests/: test_experiment.py  test_notebook_static.py
