[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnn-cifar10-classification"
version = "0.1.0"
description = "Reproducible CIFAR-10 CNN comparison with ResNet-18 fine-tuning and an AlexNet-style baseline."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
dependencies = [
    "torch>=2.1,<3",
    "torchvision>=0.16,<1",
    "numpy>=1.23,<2",
    "matplotlib>=3.7,<4",
    "scikit-learn>=1.2,<2",
    "seaborn>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
]
notebook = [
    "jupyter>=1.0,<2",
    "ipykernel>=6.0,<7",
]

[project.scripts]
cnn-cifar10-classification = "cnn_cifar10_classification.experiment:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
